# pinocchio_utilities

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_test.sh  pyproject.toml
include/: geometry.h  logging.h  logging.hpp  meshcat_utilities.h  meshcat_utilities.hpp  pinocchio_utilities.h  pinocchio_utilities.hpp  robot.h  utilities.h
python/: __init__.py
robots/: gen3.urdf  gen3_simplified.urdf  gen3_spheres.urdf
robots/kortex_description/arms/gen3/7dof/meshes/: base_link_convex_hull.stl  base_link_decimate_modifiers_convex_hull.stl  bracelet_no_vision_link_convex_hull.stl  bracelet_no_vision_link_decimate_modifiers_convex_hull.stl  bracelet_with_vision_link_decimate_modifiers_convex_hull.stl  forearm_link_convex_hull.stl  forearm_link_decimate_modifiers_convex_hull.stl  half_arm_1_link_convex_hull.stl  half_arm_1_link_decimate_modifiers_convex_hull.stl  half_arm_2_link_convex_hull.stl  half_arm_2_link_decimate_modifiers_convex_hull.stl  shoulder_link_convex_hull.stl  shoulder_link_decimate_modifiers_convex_hull.stl  spherical_wrist_1_link_convex_hull.stl  spherical_wrist_1_link_decimate_modifiers_convex_hull.stl  spherical_wrist_2_link_convex_hull.stl  spherical_wrist_2_link_decimate_modifiers_convex_hull.stl
robots/kortex_description/arms/gen3/7dof/urdf/: GEN3-7DOF-NOVISION_FOR_URDF_ARM_V12.urdf  GEN3-7DOF-VISION_ARM_URDF_V12.urdf  GEN3-7DOF_BRAKES_NO-VISION_URDF_ARM_V01.urdf  GEN3-7DOF_BRAKES_VISION_URDF_ARM_V01.urdf  gen3_macro.xacro
src/: example.cpp  geometry.cpp  logging.cpp  main.cpp  meshcat_utilities.cpp  pinocchio_utilities.cpp  python_bindings.cpp  robot.cpp
test/: test.py
